# QtGigE

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  basler_acA2000-50gc.cc  basler_acA2000-50gc.h  qtgige.cc  qtgige.h
CMAKE_Modules/: FindRT.cmake
test/: CMakeLists.txt  cam_interface_test.cpp  cam_interface_test.h  cqtopencvviewergl.cpp  cqtopencvviewergl.h  demosaic_cv.cpp  demosaic_cv.h  main.cpp
